mengupdate foto lebih ringan

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <div class="container">
-      <h1>Graduation Of</h1>
       <h1>💕 Miska Wahyu Mithata Ika Setata 💕</h1>
+      <h1>Graduation Gallery</h1>
 
       <div class="carousel">
         <!-- Baris Pertama -->
