--- a/login.html
+++ b/login.html
@@ -32,8 +32,13 @@
     }
 
     h2 {
-      margin-bottom: 20px;
+      margin-bottom: 10px;
       text-shadow: 0 0 15px #a290ff;
+    }
+
+    h3{
+      text-shadow: 0 0 15px #a290ff;
+      margin-bottom: 20px;
     }
 
     input {
@@ -78,7 +83,8 @@
 </head>
 <body>
   <div class="login-container">
-    <h2>Login 💕 Graduation Gallery 💕</h2>
+    <h2>Login </h2>
+    <h3>💕 Graduation Gallery 💕</h3>
     <input type="text" id="username" placeholder="Username" />
     <input type="password" id="password" placeholder="Password" />
     <button onclick="login()">Login</button>
